# csv-sql

./: .gitignore  Cargo.toml  justfile  readme.md
src/: args_validation.rs  csv_parser.rs  main.rs
